--- a/index1.html
+++ b/index1.html
@@ -115,17 +115,71 @@
 <div class="row">
 <div class="col-md-6">
 <h1 style="font-family: MyriadProBold;font-size: 40px;">NOUVEAUX ÉPISODES<br></h1>
-<a href='watch?s=0&e=02'>
-<div data-bss-hover-animate='pulse' style='position: relative;text-align: center;color: white;margin-bottom: 15px;'>
-<h1 class='ep_card_title'>Shanghai, Ladydragon</h1><img style='background: linear-gradient(rgba(0,0,0,.5),rgba(0,0,0,.5)),url(https://i.ibb.co/4d021h2/Shanghai.jpg) center/cover;!important' class='ep_card_img' />
-</div>
-</a>
-<a href='watch?s=4&e=01'>
-<div data-bss-hover-animate='pulse' style='position: relative;text-align: center;color: white;margin-bottom: 15px;'>
-<h1 class='ep_card_title'>Vérité</h1><img style='background: linear-gradient(rgba(0,0,0,.5),rgba(0,0,0,.5)),url(https://i.ibb.co/RDJGfLp/vlcsnap-2021-04-03-08h41m54s875.jpg) center/cover;!important' class='ep_card_img' />
-</div>
-</a>
-</div>
+ <link href="album.css" rel="stylesheet">
+<main role="main">
+
+  <div class="album py-5 bg-light">
+    <div class="container">
+
+      <div class="row">
+         <div class="col-md-4">
+          <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
+            <a href="https://itsladybug.cf/402sub"><img src="https://itsladybug.cf/assets/images/402.jpg" class="img-fluid" alt="Responsive image" title>
+            <div class="card-body">
+              <p class="card-text"><a href="https://itsladybug.cf/402sub">Lie<br><br></a></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">S4E02 | 22 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
+            <a href="https://itsladybug.cf/watch.html?episode=4_01&language=en"><img src="https://itsladybug.cf/assets/images/401.jpg" class="img-fluid" alt="Responsive image" title>
+            <div class="card-body">
+              <p class="card-text"><a href="https://itsladybug.cf/watch.html?episode=4_01&language=en">Truth<br></a></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">S4E01 | 22 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
+            <a href="https://itsladybug.cf/watch.html?episode=4_06&language=en"><img src="https://itsladybug.cf/assets/images/406.jpg" class="img-fluid" alt="Responsive image" title>
+            <div class="card-body">
+              <p class="card-text"><a href="https://itsladybug.cf/watch.html?episode=4_06&language=en">Furious Fu</a></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">S4E06 | 22 mins</small>
+              </div>
+            </div>
+          </div>
+	<head>
+<style>
+/* unvisited link */
+a:link {
+  color: grey;
+}
+
+/* visited link */
+a:visited {
+  color: black;
+}
+
+/* mouse over link */
+a:hover {
+  color: grey;
+}
+
+/* selected link */
+a:active {
+  color: grey;
+} 
+</style>
+</head>
+<body>
+
+ &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://itsladybug.cf/fullepisodes.html">SHOW ALL</a>
 <div class="col-md-6">
 <h1 style="font-family: MyriadProBold;font-size: 40px;">EN DIRECT<br></h1><style>
 .twitch .twitch-video {
