--- a/index1.html
+++ b/index1.html
@@ -115,71 +115,125 @@
 <div class="row">
 <div class="col-md-6">
 <h1 style="font-family: MyriadProBold;font-size: 40px;">NOUVEAUX ÉPISODES<br></h1>
- <link href="album.css" rel="stylesheet">
-<main role="main">
-
-  <div class="album py-5 bg-light">
-    <div class="container">
-
-      <div class="row">
-         <div class="col-md-4">
-          <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
-            <a href="https://itsladybug.cf/402sub"><img src="https://itsladybug.cf/assets/images/402.jpg" class="img-fluid" alt="Responsive image" title>
-            <div class="card-body">
-              <p class="card-text"><a href="https://itsladybug.cf/402sub">Lie<br><br></a></p>
-              <div class="d-flex justify-content-between align-items-center">
-                <small class="text-muted">S4E02 | 22 mins</small>
-              </div>
-            </div>
-          </div>
-		 </div>
 	<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-/* unvisited link */
-a:link {
-  color: grey;
+.collapsible {
+  background-color: #FFFFFF;
+  color: red;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
 }
 
-/* visited link */
-a:visited {
-  color: black;
+.active, .collapsible:hover {
+  background-color: #FFFFFF;
 }
 
-/* mouse over link */
-a:hover {
-  color: grey;
+.content {
+  padding: 0 18px;
+  display: none;
+  overflow: hidden;
+  background-color: #f1f1f1;
 }
-
-/* selected link */
-a:active {
-  color: grey;
-} 
 </style>
 </head>
 <body>
 
- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://itsladybug.cf/fullepisodes.html">SHOW ALL</a>
+<p>NEWS!</p>
+<button type="button" class="collapsible">Next episode release date!</button>
+<div class="content">
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  <img src="img_paris.jpg" alt="Paris" style="width:50%;">
+</div>
+<button type="button" class="collapsible">Open Section 2</button>
+<div class="content">
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+</div>
+<button type="button" class="collapsible">Open Section 3</button>
+<div class="content">
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+</div>
+
+<script>
+var coll = document.getElementsByClassName("collapsible");
+var i;
+
+for (i = 0; i < coll.length; i++) {
+  coll[i].addEventListener("click", function() {
+    this.classList.toggle("active");
+    var content = this.nextElementSibling;
+    if (content.style.display === "block") {
+      content.style.display = "none";
+    } else {
+      content.style.display = "block";
+    }
+  });
+}
+</script>
+
+	</body></div>
+
+ 
 <div class="col-md-6">
-<h1 style="font-family: MyriadProBold;font-size: 40px;">EN DIRECT<br></h1><style>
-.twitch .twitch-video {
-  padding-top: 56.25%;
-  position: relative;
-  height: 0;
+<h1 style="font-family: MyriadProBold;font-size: 40px;">EN DIRECT<br></h1>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body, html {
+  height: 90%;
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-.twitch .twitch-video iframe {
+.hero-image {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://itsladybug.cf/assets/images/402.jpg");
+  height: 50%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+.hero-text {
+  text-align: center;
   position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+}
+
+.hero-text button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 10px 25px;
+  color: black;
+  background-color: #ddd;
+  text-align: center;
+  cursor: pointer;
+}
+
+.hero-text button:hover {
+  background-color: #555;
+  color: white;
 }
 </style>
-<div class="twitch" style="background-color: black;">
-<div class="twitch-video">
-<iframe src="https://player.twitch.tv/?channel=MiraculousTO&parent=miraculous.to&parent=www.miraculous.to&autoplay=true" frameborder="0" scrolling="no" allowfullscreen="true" height="100%" width="100%">
-    </iframe>
+</head>
+<body>
+
+<div class="hero-image">
+  <div class="hero-text">
+    <h1 style="font-size:50px">LIE</h1>
+  </div>
 </div>
-</div>
+
+</body>
 </div>
 </div>
 <div class="container" style="margin-top: 20px; padding: 0;">
