--- a/index1.html
+++ b/index1.html
@@ -115,127 +115,41 @@
 <div class="row">
 <div class="col-md-6">
 <h1 style="font-family: MyriadProBold;font-size: 40px;">NOUVEAUX ÉPISODES<br></h1>
-	<head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-.collapsible {
-  background-color: #FFFFFF;
-  color: red;
-  cursor: pointer;
-  padding: 18px;
-  width: 100%;
-  border: none;
-  text-align: left;
-  outline: none;
-  font-size: 15px;
-}
-
-.active, .collapsible:hover {
-  background-color: #FFFFFF;
-}
-
-.content {
-  padding: 0 18px;
-  display: none;
-  overflow: hidden;
-  background-color: #f1f1f1;
-}
-</style>
-</head>
-<body>
-
-<p>NEWS!</p>
-<button type="button" class="collapsible">Next episode release date!</button>
-<div class="content">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-  <img src="img_paris.jpg" alt="Paris" style="width:50%;">
+<a href='watch?s=0&e=02'>
+<div data-bss-hover-animate='pulse' style='position: relative;text-align: center;color: white;margin-bottom: 15px;'>
+<h1 class='ep_card_title'>Shanghai, Ladydragon</h1><img style='background: linear-gradient(rgba(0,0,0,.5),rgba(0,0,0,.5)),url(https://i.ibb.co/4d021h2/Shanghai.jpg) center/cover;!important' class='ep_card_img' />
 </div>
-<button type="button" class="collapsible">Open Section 2</button>
-<div class="content">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+</a>
+<a href='watch?s=4&e=01'>
+<div data-bss-hover-animate='pulse' style='position: relative;text-align: center;color: white;margin-bottom: 15px;'>
+<h1 class='ep_card_title'>Vérité</h1><img style='background: linear-gradient(rgba(0,0,0,.5),rgba(0,0,0,.5)),url(https://i.ibb.co/RDJGfLp/vlcsnap-2021-04-03-08h41m54s875.jpg) center/cover;!important' class='ep_card_img' />
 </div>
-<button type="button" class="collapsible">Open Section 3</button>
-<div class="content">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+</a>
 </div>
-
-<script>
-var coll = document.getElementsByClassName("collapsible");
-var i;
-
-for (i = 0; i < coll.length; i++) {
-  coll[i].addEventListener("click", function() {
-    this.classList.toggle("active");
-    var content = this.nextElementSibling;
-    if (content.style.display === "block") {
-      content.style.display = "none";
-    } else {
-      content.style.display = "block";
-    }
-  });
-}
-</script>
-
-	</body></div>
-
- 
 <div class="col-md-6">
-<h1 style="font-family: MyriadProBold;font-size: 40px;">EN DIRECT<br></h1>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-body, html {
-  height: 90%;
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.hero-image {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://itsladybug.cf/assets/images/402.jpg");
-  height: 50%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+<h1 style="font-family: MyriadProBold;font-size: 40px;">EN DIRECT<br></h1><style>
+.twitch .twitch-video {
+  padding-top: 56.25%;
   position: relative;
+  height: 0;
 }
 
-.hero-text {
-  text-align: center;
+.twitch .twitch-video iframe {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
-}
-
-.hero-text button {
-  border: none;
-  outline: 0;
-  display: inline-block;
-  padding: 10px 25px;
-  color: black;
-  background-color: #ddd;
-  text-align: center;
-  cursor: pointer;
-}
-
-.hero-text button:hover {
-  background-color: #555;
-  color: white;
+  width: 100%;
+  height: 100%;
+  top: 0;
 }
 </style>
-</head>
-<body>
-
-<div class="hero-image">
-  <div class="hero-text">
-    <h1 style="font-size:50px">LIE</h1>
-  </div>
-</div>
-
-</body>
+<div class="twitch" style="background-color: black;">
+<div class="twitch-video">
+<iframe src="https://player.twitch.tv/?channel=MiraculousTO&parent=miraculous.to&parent=www.miraculous.to&autoplay=true" frameborder="0" scrolling="no" allowfullscreen="true" height="100%" width="100%">
+    </iframe>
 </div>
 </div>
+</div>
+</div>
+	
 <div class="container" style="margin-top: 20px; padding: 0;">
 <div class="row">
 <div class="col" style="padding: 0;">
