--- a/shanghaispecial.html
+++ b/shanghaispecial.html
@@ -76,7 +76,7 @@
   </section>
 	
 <section class="engine"><a href="https://mobirise.info/n">free simple website templates</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXAtDb3XLd" id="custom-html-1w" data-rv-view="281">
-  <h1><br><br>Miraculous World Shanghai : The Legend of Ladydragon</h1>
+  <h1><br><br>Miraculous World Shanghai : The Legend of Ladydragon [ENG DUB]</h1>
    <hr>
   <p></p>
 <link rel="stylesheet" href="https://cdn.plyr.io/3.5.6/plyr.css">
@@ -86,7 +86,7 @@
           const player = Plyr.setup('.js-player');
       });
   </script>
-  <video poster="https://itsladybug.cf/img/Eb3ANjqXsAE-L6F.jpg" id="player" playsinline="" controls=""> <source src="https://vk.com/doc-192921485_595926479" type="video/mp4"> </video>
+  <video poster="https://itsladybug.cf/img/Eb3ANjqXsAE-L6F.jpg" id="player" playsinline="" controls=""> <source src="https://vk.com/doc-120991336_594347730" type="video/mp4"> </video>
    <!-- CUSTOM -->
         
 <script src="player_data/polyfill.min.js"></script>
@@ -107,7 +107,7 @@ window.player = player;
     <div class=".container-fluid">
         <div class="media-container-fluid title">
             <div class="p-3 my-3 bg-dark text-white">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">Download</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://vk.com/doc-120991336_594347730">Download</a></div>
 </div></div></div></section>
 <script async="async" data-cfasync="false" src="//wgat5ln2wly8.com/baa6c23cdf01effd24dde795c0d1c464/invoke.js"></script>
 <div id="container-baa6c23cdf01effd24dde795c0d1c464"></div>
