--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
 	<div class="card mb-4 shadow-sm mb-4 bg-white rounded">
     <img src="https://itsladybug.cf/img/Eb3ANjqXsAE-L6F.jpg" class="card-img-top" alt="..." title>
     <div class="card-body">
-      <p class="card-text"><a href="https://itsladybug.cf/shanghaisubs.html">Miraculous World, Shanghai</a></p>
-      <p class="card-text"><small class="text-muted">55m minutes</small></p>
+      <p class="card-text"><a href="https://itsladybug.cf/shanghaispecial.html">Miraculous World, Shanghai [ENG DUB]</a></p>
+      <p class="card-text"><small class="text-muted">55 minutes</small></p>
     </div>
   </div>
 </div>
