--- a/fullepisodes.html
+++ b/fullepisodes.html
@@ -1141,7 +1141,7 @@
           <div class="card mb-4 shadow-sm bg-white rounded">
             <a href="https://itsladybug.cf/shanghaispecial.html"><img src="https://itsladybug.cf/img/Eb3ANjqXsAE-L6F.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
             <div class="card-body">
-              <p class="card-text"><a href="https://itsladybug.cf/shanghaisubs.html">Shanghai Special</a></p>
+              <p class="card-text"><a href="https://itsladybug.cf/shanghaispecial.html">Shanghai Special [ENG DUB]</a></p>
               <div class="d-flex justify-content-between align-items-center">
                 <small class="text-muted">1 hour</small>
               </div>
