--- a/index.html
+++ b/index.html
@@ -661,9 +661,20 @@ function showSlides(n) {
       <div class="row">
          <div class="col-md-4">
           <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
-            <a href="https://itsladybug.cf/402sub"><img src="https://itsladybug.cf/assets/images/402.jpg" class="img-fluid" alt="Responsive image" title>
+            <a href="https://itsladybug.cf/watch.html?episode=4_03&language=en"><img src="https://itsladybug.cf/assets/images/403.jpg" class="img-fluid" alt="Responsive image" title>
             <div class="card-body">
-              <p class="card-text"><a href="https://itsladybug.cf/402sub">Lie<br><br></a></p>
+              <p class="card-text"><a href="https://itsladybug.cf/watch.html?episode=4_03&language=en">Gang of Secret<br></a></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">S4E03 | 22 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
+            <a href="https://itsladybug.cf/watch.html?episode=4_02&language=en"><img src="https://itsladybug.cf/assets/images/402.jpg" class="img-fluid" alt="Responsive image" title>
+            <div class="card-body">
+              <p class="card-text"><a href="https://itsladybug.cf/watch.html?episode=4_02&language=en">Lie<br></a></p>
               <div class="d-flex justify-content-between align-items-center">
                 <small class="text-muted">S4E02 | 22 mins</small>
               </div>
@@ -674,20 +685,9 @@ function showSlides(n) {
           <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
             <a href="https://itsladybug.cf/watch.html?episode=4_01&language=en"><img src="https://itsladybug.cf/assets/images/401.jpg" class="img-fluid" alt="Responsive image" title>
             <div class="card-body">
-              <p class="card-text"><a href="https://itsladybug.cf/watch.html?episode=4_01&language=en">Truth<br></a></p>
+              <p class="card-text"><a href="https://itsladybug.cf/watch.html?episode=4_01&language=en">Truth</a></p>
               <div class="d-flex justify-content-between align-items-center">
                 <small class="text-muted">S4E01 | 22 mins</small>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
-            <a href="https://itsladybug.cf/watch.html?episode=4_06&language=en"><img src="https://itsladybug.cf/assets/images/406.jpg" class="img-fluid" alt="Responsive image" title>
-            <div class="card-body">
-              <p class="card-text"><a href="https://itsladybug.cf/watch.html?episode=4_06&language=en">Furious Fu</a></p>
-              <div class="d-flex justify-content-between align-items-center">
-                <small class="text-muted">S4E06 | 22 mins</small>
               </div>
             </div>
           </div>
