--- a/gangofsecretensub.html
+++ b/gangofsecretensub.html
@@ -100,7 +100,7 @@
 	<div class="more_options" style="margin-bottom:23px;margin-left:10px;margin-right:10px;">
          <p style="margin-top: 10px;margin-bottom: 0px;">SELECT YOUR SERVER: *Note: if the first server didn't work with english subtitles, click on the second one* <br>
 
-<a title='ANGLAIS' href='/' style='color:#FFFFFF;'>SERVER 1</a>
+<a title='ANGLAIS' href='/gangofsecretensub' style='color:#FFFFFF;'>SERVER 1</a>
          <a title='FRANÇAIS' href='/' style='color:#FFFFFF;'>SERVER 2</a>     </p>
     </div>
 <link rel="stylesheet" href="https://cdn.plyr.io/3.5.6/plyr.css">
@@ -111,10 +111,10 @@
       });
   </script>
  <video id="player" playsinline controls data-poster="/path/to/poster.jpg">
-  <source src="https://vk.com/doc-120991336_593576673" type="video/mp4" />
+  <source src="https://vk.com/doc-120991336_594412252" type="video/mp4" />
 
   <!-- Captions are optional -->
-  <track kind="captions" label="English captions" src="https://itsladybug.cf/402.vtt" srclang="en" default />
+  <track kind="captions" label="English captions" src="https://itsladybug.cf/403en.vtt" srclang="en" default />
 </video>
    <!-- CUSTOM -->
         
