--- a/index.html
+++ b/index.html
@@ -661,9 +661,9 @@ function showSlides(n) {
       <div class="row">
          <div class="col-md-4">
           <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
-            <a href="https://itsladybug.cf/watch.html?episode=4_03&language=en"><img src="https://itsladybug.cf/assets/images/403.jpg" class="img-fluid" alt="Responsive image" title>
+            <a href="https://itsladybug.cf/ganofsecretensub"><img src="https://itsladybug.cf/assets/images/403.jpg" class="img-fluid" alt="Responsive image" title>
             <div class="card-body">
-              <p class="card-text"><a href="https://itsladybug.cf/watch.html?episode=4_03&language=en">Gang of Secret<br></a></p>
+              <p class="card-text"><a href="https://itsladybug.cf/gangofsecretensub">Gang of Secret<br></a></p>
               <div class="d-flex justify-content-between align-items-center">
                 <small class="text-muted">S4E03 | 22 mins</small>
               </div>
