--- a/fullepisodes.html
+++ b/fullepisodes.html
@@ -1089,9 +1089,9 @@
         </div>
 		       <div class="col-md-4">
           <div class="card mb-4 shadow-sm bg-white rounded">
-            <a href="https://itsladybug.cf/watch.html?episode=4_03&language=en"><img src="/assets/images/403.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
+            <a href="https://itsladybug.cf/gangofsecretensub"><img src="/assets/images/403.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
             <div class="card-body">
-              <p class="card-text"><a href="https://itsladybug.cf/watch.html?episode=4_03&language=en">Gang of Secret</a></p>
+              <p class="card-text"><a href="https://itsladybug.cf/gangofsecretensub">Gang of Secret [ENG SUB]</a></p>
               <div class="d-flex justify-content-between align-items-center">
                 <small class="text-muted">S4E03 | 22 mins</small>
               </div>
