--- a/index.html
+++ b/index.html
@@ -89,7 +89,6 @@
 		<select name="forma" onchange="location = this.value;">
  <option>English</option>
  <option value="https://itsladybug.cf/fr"> French</option>
-      <option value="https://itsladybug.cf/it"> Italian</option>
 </select>
                   </a></p>
                 
@@ -661,6 +660,17 @@ function showSlides(n) {
       <div class="row">
          <div class="col-md-4">
           <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
+            <a href="https://itsladybug.cf/season4-episode11"><img src="https://itsladybug.cf/assets/images/411.jpg" class="img-fluid" alt="Responsive image" title>
+            <div class="card-body">
+              <p class="card-text"><a href="https://itsladybug.cf/season4-episode11">Guiltrip<br></a></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">S4E11 | 22 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
             <a href="https://itsladybug.cf/ganofsecretensub"><img src="https://itsladybug.cf/assets/images/403.jpg" class="img-fluid" alt="Responsive image" title>
             <div class="card-body">
               <p class="card-text"><a href="https://itsladybug.cf/gangofsecretensub">Gang of Secret<br></a></p>
@@ -672,25 +682,15 @@ function showSlides(n) {
         </div>
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
-            <a href="https://itsladybug.cf/watch.html?episode=4_02&language=en"><img src="https://itsladybug.cf/assets/images/402.jpg" class="img-fluid" alt="Responsive image" title>
+            <a href="https://itsladybug.cf/402sub"><img src="https://itsladybug.cf/assets/images/402.jpg" class="img-fluid" alt="Responsive image" title>
             <div class="card-body">
-              <p class="card-text"><a href="https://itsladybug.cf/watch.html?episode=4_02&language=en">Lie<br></a></p>
+              <p class="card-text"><a href="402sub">Lie<br></a></p>
               <div class="d-flex justify-content-between align-items-center">
                 <small class="text-muted">S4E02 | 22 mins</small>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
-            <a href="https://itsladybug.cf/watch.html?episode=4_01&language=en"><img src="https://itsladybug.cf/assets/images/401.jpg" class="img-fluid" alt="Responsive image" title>
-            <div class="card-body">
-              <p class="card-text"><a href="https://itsladybug.cf/watch.html?episode=4_01&language=en">Truth</a></p>
-              <div class="d-flex justify-content-between align-items-center">
-                <small class="text-muted">S4E01 | 22 mins</small>
-              </div>
-            </div>
-          </div>
 	<head>
 <style>
 /* unvisited link */
