--- a/fullepisodes.html
+++ b/fullepisodes.html
@@ -1111,7 +1111,7 @@
         </div>
 		      <div class="col-md-4">
           <div class="card mb-4 shadow-sm bg-white rounded">
-            <a href="https://itsladybug.cf/season4-episode11"><img src="/assets/images/411.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
+            <a href="https://itsladybug.cf/season4-episode11"><img src="/assets/images/411.png" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
             <div class="card-body">
               <p class="card-text"><a href="https://itsladybug.cf/season4-episode11">Guiltrip</a></p>
               <div class="d-flex justify-content-between align-items-center">
