--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@ function showSlides(n) {
       <div class="row">
          <div class="col-md-4">
           <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
-            <a href="https://itsladybug.cf/season4-episode11"><img src="https://itsladybug.cf/assets/images/411.png" class="img-fluid" alt="Responsive image" title>
+            <a href="https://itsladybug.cf/season4-episode11"><img src="https://itsladybug.cf/img/411.png" class="img-fluid" alt="Responsive image" title>
             <div class="card-body">
               <p class="card-text"><a href="https://itsladybug.cf/season4-episode11">Guiltrip<br></a></p>
               <div class="d-flex justify-content-between align-items-center">
