--- a/season4-episode11.html
+++ b/season4-episode11.html
@@ -88,7 +88,7 @@
           const player = Plyr.setup('.js-player');
       });
   </script>
- <video id="player" playsinline controls data-poster="/assets/img/411.png">
+ <video id="player" playsinline controls data-poster="/img/411.png">
   <source src="https://vk.com/doc-120991336_596411186" type="video/mp4" />
 
   <!-- Captions are optional -->
