--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 </section>
 	<div class="album py-5 bg-light">
 		<div class="alert alert-warning alert-dismissible fade show" role="alert">
-		<strong>The second episode of season 4 is now available with english subtitles!</strong>
+		<strong>Episode 11 "Guiltrip" of season 4 is now available with english subtitles!</strong>
   <button type="button" class="close" data-dismiss="alert" aria-label="Close">
     <span aria-hidden="true">&times;</span>
   </button>
@@ -662,7 +662,7 @@ function showSlides(n) {
           <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
             <a href="https://itsladybug.cf/season4-episode11"><img src="https://itsladybug.cf/img/411.png" class="img-fluid" alt="Responsive image" title>
             <div class="card-body">
-              <p class="card-text"><a href="https://itsladybug.cf/season4-episode11">Guiltrip<br></a></p>
+              <p class="card-text"><a href="https://itsladybug.cf/season4-episode11">Guiltrip [ENG SUB]<br></a></p>
               <div class="d-flex justify-content-between align-items-center">
                 <small class="text-muted">S4E11 | 22 mins</small>
               </div>
