--- a/fullepisodes.html
+++ b/fullepisodes.html
@@ -1113,7 +1113,7 @@
           <div class="card mb-4 shadow-sm bg-white rounded">
             <a href="https://itsladybug.cf/season4-episode11"><img src="/img/411.png" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
             <div class="card-body">
-              <p class="card-text"><a href="https://itsladybug.cf/season4-episode11">Guiltrip</a></p>
+              <p class="card-text"><a href="https://itsladybug.cf/season4-episode11">Guiltrip [ENG SUB]</a></p>
               <div class="d-flex justify-content-between align-items-center">
                 <small class="text-muted">S4E11 | 22 mins</small>
               </div>
