--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html><head><script src="/cdn-cgi/apps/head/eg13MgcAVSt5MiVMvWQEyQG1lrs.js"></script></head><center><h2> You will be redirected in <span id="countdowntimer">25 </span> Seconds</h2></center>
+<html><head><script src="/cdn-cgi/apps/head/eg13MgcAVSt5MiVMvWQEyQG1lrs.js"></script></head><center></h1>We've moved, you will be redirected to a more organized website</br><h2> You will be redirected in <span id="countdowntimer">25 </span> Seconds</h2></center>
 
 <script type="text/javascript">
     var timeleft = 25;
