--- a/index.html
+++ b/index.html
@@ -2,6 +2,19 @@
 <html>
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
+ <script type='text/javascript' src='//discoverethelwaiter.com/aa/31/15/aa3115812bb466a9af9dfd1f34947129.js'></script>
+ <script type='text/javascript' src='//discoverethelwaiter.com/04/ef/07/04ef07095669d771353e9c98dc1cbfff.js'></script>
+  <!-- Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-165017722-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-165017722-1');
+</script>
+<!-- /Analytics -->
 <style>
 body, html {
   height: 100%;
