--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ hr {
 
 <div class="bgimg">
   <div class="topleft">
-  </br><img src="https://miraculousladybug.bss.design/assets/img/Miraculous_logo.png" height="70px" />
+  </br><img src="https://itsladybug.cf/assets/images/aaaabvmrnux0-13ycrrkkq0g-utiiavdr9xxueoxbuimudkecfmtg1pmf7bnwqg5me-gbdrv2fcx9w2fvm-ktgikv-4arrpgehykmcx7-316x134.png" height="70px" />
   </div>
   <div class="middle">
     <h3 style="font-family: Montserrat;">GUILTRIP [ENG SUB]</h3>
@@ -70,6 +70,6 @@ hr {
 </video>
   </div>
 </div>
-
+<h5 style="font-family: Montserrat;">Since some people managed to delete my website, you can now watch the latest episode here, and please do not watch it on any other site exept this one or miraculoushub.ml which is also deleted by the same people</h5>
 </body>
 </html>
