--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@ hr {
     <video width="100%" controls="" style="border-radius:10px" poster="">
 <source src="https://vk.com/doc593404724_596276865?hash=a0633778d0b917fb2a&dl=a0e6bf69aa7c6031b7" type="video/mp4">
 </video>
+ </br></br><h5 style="font-family: Montserrat;">Since some people managed to delete my website, you can now watch the latest episode here, and please do not watch it on any other site exept this one or miraculoushub.ml which is also deleted by the same people</h5>
   </div>
 </div>
-<h5 style="font-family: Montserrat;">Since some people managed to delete my website, you can now watch the latest episode here, and please do not watch it on any other site exept this one or miraculoushub.ml which is also deleted by the same people</h5>
 </body>
 </html>
