--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="shortcut icon" href="assets/images/282919-128x72.png" type="image/x-icon">
   <meta name="description" content="">
   
-  <title>Home</title>
+  <title>WATCH | MIRACULOUS TALES OF LADYBUG & CATNOIR</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -88,7 +88,7 @@ hr {
   <div class="middle">
     <h3 style="font-family: Montserrat;">GUILTRIP [ENG SUB]</h3>
     <hr></br>
-    <video width="100%" controls="" style="border-radius:10px" poster="">
+    <video width="200%" controls="" style="border-radius:10px" poster="">
 <source src="https://vk.com/doc593404724_596276865?hash=a0633778d0b917fb2a&dl=a0e6bf69aa7c6031b7" type="video/mp4">
 </video>
   </div>
