--- a/index.html
+++ b/index.html
@@ -1,7 +1,4 @@
 <!DOCTYPE html>
-<html>
- 
-<!DOCTYPE html>
 <html  >
   <head>
   <!-- Site made with Mobirise Website Builder v4.12.3, https://mobirise.com -->
@@ -12,7 +9,7 @@
   <link rel="shortcut icon" href="assets/images/282919-128x72.png" type="image/x-icon">
   <meta name="description" content="">
   
-  <title>WATCH | MIRACULOUS TALES OF LADYBUG & CATNOIR</title>
+  <title>WATCH GUILTRIP | MIRACULOUS TALES OF LADYBUG & CATNOIR</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -79,7 +76,38 @@ hr {
 }
 </style>
 <body>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+.alert {
+  padding: 20px;
+  background-color: #f44336;
+  color: white;
+}
 
+.closebtn {
+  margin-left: 15px;
+  color: white;
+  font-weight: bold;
+  float: right;
+  font-size: 22px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.closebtn:hover {
+  color: black;
+}
+</style>
+</head>
+<body>
+
+<div class="alert">
+  <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
+  <strong>WE WILL BE COMING BACK SO SOON (WWW.BEMIRACULOUS.ML)</strong>
+</div>
+
+</body>
 <div class="bgimg">
   <div class="topleft">
   </br><img src="https://itsladybug.cf/assets/images/aaaabvmrnux0-13ycrrkkq0g-utiiavdr9xxueoxbuimudkecfmtg1pmf7bnwqg5me-gbdrv2fcx9w2fvm-ktgikv-4arrpgehykmcx7-316x134.png" height="70px" />
