--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="assets/images/282919-128x72.png" type="image/x-icon">
   <meta name="description" content="">
   
-  <title>WATCH GUILTRIP | MIRACULOUS TALES OF LADYBUG & CATNOIR</title>
+  <title>WATCH | MIRACULOUS TALES OF LADYBUG & CATNOIR</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -113,6 +113,60 @@ hr {
   </br><img src="https://itsladybug.cf/assets/images/aaaabvmrnux0-13ycrrkkq0g-utiiavdr9xxueoxbuimudkecfmtg1pmf7bnwqg5me-gbdrv2fcx9w2fvm-ktgikv-4arrpgehykmcx7-316x134.png" height="70px" />
   </div>
   <div class="middle">
+    <h3 style="font-family: Montserrat;">TRUTH [ENG DUB]</h3>
+    <hr></br>
+    <video width="100%" controls="" style="border-radius:10px" poster="">
+<source src="https://vk.com/doc486652773_597328855" type="video/mp4">
+</video>
+  </div>
+</div>
+
+<style>
+body, html {
+  height: 100%;
+  margin: 0;
+}
+
+.bgimg {
+  background-image: url('https://github.com/streamunknown/streamunknown.github.io/blob/main/assets/images/Ladybug%20background.png?raw=true');
+  height: 100%;
+  background-position: center;
+  background-size: cover;
+  position: relative;
+  color: white;
+  font-family: "Courier New", Courier, monospace;
+  font-size: 25px;
+}
+
+.topleft {
+  position: absolute;
+  top: 0;
+  left: 16px;
+}
+.bottomleft {
+  position: absolute;
+  bottom: 0;
+  left: 16px;
+}
+
+.middle {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+hr {
+  margin: auto;
+  width: 90%;
+}
+</style>
+<body>
+
+</body>
+<div class="bgimg">
+  <div class="middle">
     <h3 style="font-family: Montserrat;">GUILTRIP [ENG SUB]</h3>
     <hr></br>
     <video width="100%" controls="" style="border-radius:10px" poster="">
@@ -120,5 +174,4 @@ hr {
 </video>
   </div>
 </div>
-</body>
 </html>
