--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ hr {
     <h3 style="font-family: Montserrat;">TRUTH [ENG DUB]</h3>
     <hr></br>
     <video width="100%" controls="" style="border-radius:10px" poster="">
-<source src="https://vk.com/doc486652773_597328855" type="video/mp4">
+<source src="" type="video/mp4">
 </video>
   </div>
 </div>
