--- a/watch1.html
+++ b/watch1.html
@@ -100,7 +100,7 @@
     <div class="container">
         <div class="row justify-content-md-center">
             <div class="col-md-10 align-center">
-                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-2" style="margin-bottom: -15px;margin-top: -5px;font-size: 35px;font-family: Montserrat;"></h1>
+                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-2" style="margin-bottom: -15px;margin-top: -70px;font-size: 35px;font-family: Montserrat; text-align: left;"></h1>
 
 
 
@@ -119,9 +119,8 @@
 
     <div>
        
-             </br><a class="btn lasturl" href=""><button class="navbar-toggler" style="background: #ff2b2b;width: 95%;"><h3 style="color: white;font-size: 12px;margin: 5px;margin-bottom: 7px;">LAST EPISODE</h3></button></a>
-    <a class="btn display-4" href=""><button class="navbar-toggler" style="background: #ff2b2b;width: 95%;"><h3 style="color: white;font-size: 12px;margin: 5px;margin-bottom: 7px;">DOWNLOAD</h3></button></a>
-    <a class="btn nexturl" href=""><button class="navbar-toggler" style="background: #ff2b2b;width: 95%;"><h3 style="color: white;font-size: 12px;margin: 5px;margin-bottom: 7px;">NEXT EPISODE</h3></button></a>
+             </br><a class="btn lasturl" href=""><button class="navbar-toggler" style="background: #ff2b2b;width: 95%;"><h3 style="color: white;font-size: 12.5px;margin: 5px;margin-bottom: 7px;">LAST EPISODE</h3></button></a>
+    <a class="btn nexturl" href=""><button class="navbar-toggler" style="background: #ff2b2b;width: 95%;"><h3 style="color: white;font-size: 12.5px;margin: 5px;margin-bottom: 7px;">NEXT EPISODE</h3></button></a>
               <br>
 <section style="display:none;"><a href="https://mobirise.site/p" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="" style="color:#aaa;"></a></p></section>
   <input name="animation" type="hidden">
